# email-saas

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  COMMISSIONING_REPORT.md  CRITIQUE_REMEDIATION_REPORT.md  IMPLEMENTATION_AUDIT.md  README.md  REVISED_CRITIQUE_FIXES_REPORT.md  TASKS.md  TECHNICAL_REVIEW_DOCUMENT.md  VERIFICATION.md  VERIFICATION_REPORT.md  create_tables.py  docker-compose.yml  plan.md  setup-app.sh  setup-mail.sh  setup.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/api/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/api/routers/: admin.py  aliases.py  api_keys.py  app_passwords.py  auth.py  blocked_senders.py  calendar.py  catchall.py  contacts.py  domains.py  email_rules.py  export_jobs.py  files.py  import_jobs.py  login_logs.py  mailboxes.py  notes.py  outbox.py  passkeys.py  search.py  send.py  sessions.py  snooze.py  stripe.py  tickets.py  vacation_response.py
backend/api/services/: abuse_scoring.py  api_key_crypto.py  audit.py  crypto.py  dns_check.py  metrics.py  provision.py  queue.py  send_throttle.py  stalwart_api.py  stripe_client.py  ticket_notify.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial.py  003_model_alignment.py  (+8 more)
backend/scripts/: restore_drill.py  run_provisioning_jobs.py  seed_admin.py  stalwart_smoke_test.py  worker.py
backend/tests/: conftest.py  test_admin.py  test_api_keys.py  test_auth.py  test_new_routers.py  test_rls.py  test_send.py  test_snooze.py  test_stripe_webhooks.py  test_tickets.py  test_totp_recovery.py
(+98 files in other folders)
