[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-saas-api"
version = "0.1.0"
requires-python = ">=3.11.0,<3.14.0"
dependencies = [
    "fastapi[standard]==0.136.3",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "SQLAlchemy[asyncio]==2.0.50",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "stripe==15.1.0",
    "python-jose[cryptography]==3.5.0",
    "cryptography==46.0.7",
    "bcrypt==4.3.0",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "email-validator==2.3.0",
    "pyotp==2.9.0",
    "redis==5.2.1",
    "python-multipart==0.0.27",
    "pytest-timeout>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "aiosqlite==0.21.0",
]

[tool.setuptools]
packages = ["api", "api.routers", "api.services", "migrations", "tests"]
